fix (header): nav no overflow content

--- a/src/css/_base.sass
+++ b/src/css/_base.sass
@@ -12,7 +12,8 @@ html
     scroll-behavior: smooth
     font-size: 16px
 
-    @media screen and (max-width: 700px)
+@media screen and (max-width: 700px)
+    html
         font-size: 12px
 
 body
@@ -20,7 +21,10 @@ body
     padding: 0
     background-color: $color-d
     font-family: 'Overpass', sans-serif
+
+#root
     overflow-x: hidden
+    width: 100vw
 
 
 p
